--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -7,7 +7,8 @@
   <script src="https://www.gstatic.com/charts/loader.js"></script>
   <style>
     :root {
-      --accent: #639cd4; // #4caf50;
+      --accent: #639cd4;
+      /* #4caf50; */
       --accent-light: #f0f8f0;
       --danger: #f44336;
       --danger-light: #fff5f5;
@@ -236,7 +237,7 @@
       margin: 20px 0;
     }
 
-    /* Range input */
+    /* Range input */с
     .range-slider input[type="range"] {
       position: absolute;
       width: 100%;
@@ -244,6 +245,7 @@
       background: transparent;
       pointer-events: none;
       -webkit-appearance: none;
+      appearance: none;
       margin: 0;
     }
 
