Fix typo in CSS comment for range input

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -237,7 +237,7 @@
       margin: 20px 0;
     }
 
-    /* Range input */с
+    /* Range input */
     .range-slider input[type="range"] {
       position: absolute;
       width: 100%;
